# english_level

./: .gitignore  README  catbost.ipynb  dvc.yaml  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/learn/: events.out.tfevents
catboost_info/fold-0/test/: events.out.tfevents
catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-1/learn/: events.out.tfevents
catboost_info/fold-1/test/: events.out.tfevents
catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-2/learn/: events.out.tfevents
catboost_info/fold-2/test/: events.out.tfevents
catboost_info/fold-3/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-3/learn/: events.out.tfevents
catboost_info/fold-3/test/: events.out.tfevents
catboost_info/fold-4/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-4/learn/: events.out.tfevents
catboost_info/fold-4/test/: events.out.tfevents
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
notebook/: catboost_text_test.ipynb  catbostext.ipynb  notebook.ipynb  rnn.ipynb  train_model.ipynb
src.egg-info/: SOURCES.txt
src/features/: make_emb.py  preprocessing_text.py
src/pipline/: pipline_make_text.py  pipline_preprocessing_text.py
